# 2024-06-11

./: .gitmodules  CMakeLists.txt  README.rst
exercises/ausbaufaehig/: CMakeLists.txt  project-config.h.in
exercises/ausbaufaehig/cmake/: external-dependencies.cmake  my_add_library.cmake
exercises/ausbaufaehig/firmware/: 2024-06-27.conf  CMakeLists.txt  boiling-pot.cpp  data-logger-deeply-embedded.cpp  data-logger.cpp
exercises/ausbaufaehig/toolcase/base/: CMakeLists.txt
exercises/ausbaufaehig/toolcase/base/src/: sensor-w1.cpp  sysfs-switch.cpp
exercises/ausbaufaehig/toolcase/boiling-pot/: CMakeLists.txt
exercises/ausbaufaehig/toolcase/data-logger/: CMakeLists.txt
exercises/straightforward/: CMakeLists.txt  README.rst
exercises/straightforward/firmware/: CMakeLists.txt  boiling-pot.cpp
exercises/straightforward/toolcase/base/: CMakeLists.txt  display-led-stripe.h
exercises/straightforward/toolcase/boiling-pot/: CMakeLists.txt  boiling-pot.h
exercises/straightforward/toolcase/data-logger/: CMakeLists.txt  data-logger.h
livecoding/: function.cmake
livecoding/intro/: CMakeLists.txt  DemoConfig.h.in
livecoding/intro/libhello/: CMakeLists.txt
livecoding/kinds-of-dependencies/: CMakeLists.txt
livecoding/kinds-of-dependencies/a/: CMakeLists.txt  a.c
livecoding/kinds-of-dependencies/b/: CMakeLists.txt
livecoding/kinds-of-dependencies/b/inc-private/: b-impl.h
livecoding/kinds-of-dependencies/b/src/: b-impl.c  b.c
livecoding/kinds-of-dependencies/c/: CMakeLists.txt
livecoding/kinds-of-dependencies/d/: CMakeLists.txt
livecoding/kinds-of-dependencies/d/inc-public/: d.h
livecoding/kinds-of-dependencies/d/src/: d.c
livecoding/language/: coding.cmake
